--- a/style/style.css
+++ b/style/style.css
@@ -120,22 +120,28 @@ form button:hover {
 
   
 .button {
- 
-  display: flex;
-  flex-direction: column;
-  padding: 10px 20px;
+  display: block;
+  width: 100%; /* Igual ao tamanho da imagem */
+  height: 100%; /* Igual ao tamanho da imagem */
+  padding: 0; /* Remover espaçamento interno */
   font-size: 16px;
   color: black;
   background-color: #d4f8a9;
   text-decoration: none;
   border: 2px solid black;
   border-radius: 5px;
-
 }
 
- .button:hover{
+.button img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Garante que a imagem se encaixe corretamente */
+}
+
+.button:hover {
   background-color: #3998b3;
- }
+}
+
 
  .animado {
   font-size: 24px;
