--- a/style/style.css
+++ b/style/style.css
@@ -84,7 +84,7 @@ footer p i {
   background: #eaf4f3;
   padding: 1rem;
   text-align: center;
-  max-width: 100%; /* Garante ajuste automático */
+  width: 100%; /* Garante ajuste automático */
   height: 100%;
 
 }
