--- a/style/style.css
+++ b/style/style.css
@@ -84,13 +84,17 @@ footer p i {
   background: #eaf4f3;
   padding: 1rem;
   text-align: center;
-  max-width: 100%; /* Garante ajuste automático */
-  height: auto;
+  width: 100%; /* Garante ajuste automático */
+  height: auto; /* Ajusta automaticamente ao tamanho da imagem */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
 }
 .grid img {
-  max-width: 100%; /* Garante ajuste automático */
-  height: 100%;
+  max-width: 100%;
+  height: auto; /* Mantém proporções corretas */
+  object-fit: contain; /* Garante que a imagem se encaixe sem cortes */
 }
 
 form {
@@ -119,23 +123,28 @@ form button:hover {
 }
 
   
-.button {
- 
-  display: flex;
-  flex-direction: column;
-  padding: 10px 20px;
-  font-size: 16px;
-  color: black;
-  background-color: #d4f8a9;
-  text-decoration: none;
-  border: 2px solid black;
-  border-radius: 5px;
-
+.button { 
+  display: flex; 
+  flex-direction: column; 
+  padding: 10px 20px; 
+  font-size: 16px; 
+  color: black; 
+  background-color: #d4f8a9; 
+  text-decoration: none; 
+  border: 2px solid black; 
+  border-radius: 5px; 
 }
 
- .button:hover{
+.button img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Garante que a imagem se encaixe corretamente */
+}
+
+.button:hover {
   background-color: #3998b3;
- }
+}
+
 
  .animado {
   font-size: 24px;
